--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.servlet.context-path=/superhero
 
+spring.datasource.url=jdbc:h2:mem:superhero
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=123123
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
