--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=123123
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
+springfox.documentation.swagger-ui.base-url=/swagger-ui-custom.html
 
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
